# pico-w-home-display

./: .gitmodules  CMakeLists.txt  README.md  lwipopts.h  main.c  main.h  mbedtls_config.h  picohttps.c  picohttps.h
Pico-LCD_lib/: CMakeLists.txt
Pico-LCD_lib/lib/config/: CMakeLists.txt
Pico-LCD_lib/lib/fatfs/: CMakeLists.txt
Pico-LCD_lib/lib/font/: CMakeLists.txt
Pico-LCD_lib/lib/lcd/: CMakeLists.txt
Pico-LCD_lib/lib/sdcard/: CMakeLists.txt
inc/: lwipopts.h  main.h  network.h  rtc.h  tram.h  weather.h
src/: main.c  network.c  rtc.c  tram.c  weather.c
